version/0.73/_sources/examples/gallery_examples/00-mapdl-examples/pyvista_mesh.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/pyvista_mesh.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py:


.. _ref_pyvista_mesh:

PyVista Mesh Integration
------------------------

Run a modal analysis on a mesh generated from pyvista within MAPDL.

.. GENERATED FROM PYTHON SOURCE LINES 32-49

.. code-block:: Python



    import os
    import tempfile

    from ansys.mapdl.reader import save_as_archive
    import pyvista as pv

    from ansys.mapdl.core import launch_mapdl

    # launch MAPDL as a service
    mapdl = launch_mapdl(loglevel="ERROR")

    # Create a simple plane mesh centered at (0, 0, 0) on the XY plane
    mesh = pv.Plane(i_resolution=100, j_resolution=100)
    mesh.plot(color="w", show_edges=True)




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_001.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 51-52

Write the mesh to a temporary file

.. GENERATED FROM PYTHON SOURCE LINES 52-84

.. code-block:: Python

    archive_filename = os.path.join(tempfile.gettempdir(), "tmp.cdb")
    save_as_archive(archive_filename, mesh)

    # Read in the archive file
    response = mapdl.cdread("db", archive_filename)
    mapdl.prep7()
    print(mapdl.shpp("SUMM"))

    # specify shell thickness
    mapdl.sectype(1, "shell")
    mapdl.secdata(0.01)
    mapdl.emodif("ALL", "SECNUM", 1)

    # specify material properties
    # using approximated values for AISI 5000 Series Steel
    # http://www.matweb.com/search/datasheet.aspx?matguid=89d4b891eece40fbbe6b71f028b64e9e
    mapdl.units("SI")  # not necessary, but helpful for book keeping
    mapdl.mp("EX", 1, 200e9)  # Elastic moduli in Pa (kg/(m*s**2))
    mapdl.mp("DENS", 1, 7800)  # Density in kg/m3
    mapdl.mp("NUXY", 1, 0.3)  # Poissons Ratio
    mapdl.emodif("ALL", "MAT", 1)

    # Run an unconstrained modal analysis
    # for the first 20 modes above 1 Hz
    mapdl.modal_analysis(nmode=20, freqb=1)

    # you could have also run:
    # mapdl.run('/SOLU')
    # mapdl.antype('MODAL')  # default NEW
    # mapdl.modopt('LANB', 20, 1)
    # mapdl.solve()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    SUMMARIZE SHAPE TESTING FOR ALL SELECTED ELEMENTS

     ------------------------------------------------------------------------------
                <<<<<<          SHAPE TESTING SUMMARY           >>>>>>
                <<<<<<        FOR ALL SELECTED ELEMENTS         >>>>>>
     ------------------------------------------------------------------------------
                        --------------------------------------
                        |  Element count     10000 SHELL181  |
                        --------------------------------------

      Test                Number tested  Warning count  Error count    Warn+Err %
      ----                -------------  -------------  -----------    ----------
      Aspect Ratio              10000              0             0         0.00 %
      Parallel Deviation        10000              0             0         0.00 %
      Maximum Angle             10000              0             0         0.00 %
      Jacobian Ratio            10000              0             0         0.00 %
      Warping Factor            10000              0             0         0.00 %

      Any                       10000              0             0         0.00 %
     ------------------------------------------------------------------------------

    *****  MAPDL SOLVE    COMMAND  *****

     *** NOTE ***                            CP =       0.000   TIME= 00:00:00
     There is no title defined for this analysis.                            

     *** SELECTION OF ELEMENT TECHNOLOGIES FOR APPLICABLE ELEMENTS ***
                    ---GIVE SUGGESTIONS ONLY---

     ELEMENT TYPE         4 IS SHELL181. IT IS ASSOCIATED WITH ELASTOPLASTIC 
     MATERIALS ONLY. KEYOPT(8)=2 IS SUGGESTED AND KEYOPT(3)=2 IS SUGGESTED FOR
     HIGHER ACCURACY OF MEMBRANE STRESSES; OTHERWISE, KEYOPT(3)=0 IS SUGGESTED.


       *****MAPDL VERIFICATION RUN ONLY*****
         DO NOT USE RESULTS FOR PRODUCTION

                           S O L U T I O N   O P T I O N S

       PROBLEM DIMENSIONALITY. . . . . . . . . . . . .3-D                  
       DEGREES OF FREEDOM. . . . . . UX   UY   UZ   ROTX ROTY ROTZ
       ANALYSIS TYPE . . . . . . . . . . . . . . . . .MODAL                
          EXTRACTION METHOD. . . . . . . . . . . . . .BLOCK LANCZOS
       NUMBER OF MODES TO EXTRACT. . . . . . . . . . .    20
       SHIFT POINT . . . . . . . . . . . . . . . . . .  1.0000    
       GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  

     *** WARNING ***                         CP =       0.000   TIME= 00:00:00
     No constraints have been defined using the D command.                   

     *** NOTE ***                            CP =       0.000   TIME= 00:00:00
     The step data was checked and warning messages were found.              
      Please review output or errors file ( ) for these warning messages.    

     *** NOTE ***                            CP =       0.000   TIME= 00:00:00
     The conditions for direct assembly have been met.  No .emat or .erot    
     files will be produced.                                                 

  
  
         D I S T R I B U T E D   D O M A I N   D E C O M P O S E R
  
      ...Number of elements: 10000
      ...Number of nodes:    10201
      ...Decompose to 0 CPU domains
      ...Element load balance ratio =     0.000


                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES



                             ***********  PRECISE MASS SUMMARY  ***********

       TOTAL RIGID BODY MASS MATRIX ABOUT ORIGIN
                   Translational mass               |   Coupled translational/rotational mass
             78.000        0.0000        0.0000     |     0.0000        0.0000      -0.93259E-14
             0.0000        78.000        0.0000     |     0.0000        0.0000      -0.35527E-14
             0.0000        0.0000        78.000     |    0.93259E-14   0.17764E-14    0.0000    
         ------------------------------------------ | ------------------------------------------
                                                    |         Rotational mass (inertia)
                                                    |     6.5006      -0.63664E-15    0.0000    
                                                    |   -0.26108E-15    6.5006        0.0000    
                                                    |     0.0000        0.0000        12.999    

       TOTAL MASS =  78.000    
         The mass principal axes coincide with the global Cartesian axes

       CENTER OF MASS (X,Y,Z)=  -0.45548E-16   0.11956E-15    0.0000    

       TOTAL INERTIA ABOUT CENTER OF MASS
             6.5006      -0.63664E-15    0.0000    
           -0.63664E-15    6.5006        0.0000    
             0.0000        0.0000        12.999    
         The inertia principal axes coincide with the global Cartesian axes


      *** MASS SUMMARY BY ELEMENT TYPE ***

      TYPE      MASS
         4   78.0000    

     Range of element maximum matrix coefficients in global coordinates
     Maximum = 749504998 at element 0.                                       
     Minimum = 749503915 at element 0.                                       

       *** ELEMENT MATRIX FORMULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            4     10000  SHELL181      0.000   0.000000
     Time at end of element matrix formulation CP = 0.                       

      BLOCK LANCZOS CALCULATION OF UP TO    20 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        61206
      MAXIMUM WAVEFRONT                =            0
      MAXIMUM MODES STORED             =           20
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory available (MB) =    0.0    ,  Memory required (MB) =    0.0    

       *****MAPDL VERIFICATION RUN ONLY*****
         DO NOT USE RESULTS FOR PRODUCTION

     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   20 MODES ABOVE   1.00000     HERTZ

        1     32.74664192993    
        2     47.77804288742    
        3     59.17108298329    
        4     84.60790505093    
        5     84.60790505228    
        6     148.8927748642    
        7     148.8927748650    
        8     154.6519861741    
        9     168.3840411458    
       10     187.7790667335    
       11     255.9751634915    
       12     255.9751634917    
       13     285.2444050781    
       14     298.2943388318    
       15     319.8023401628    
       16     319.8023401636    
       17     370.6023621797    
       18     391.8457651359    
       19     409.1039880838    
       20     482.6516135498



.. GENERATED FROM PYTHON SOURCE LINES 85-86

Load the result file within ``pyansys`` and plot the 8th mode.

.. GENERATED FROM PYTHON SOURCE LINES 86-91

.. code-block:: Python

    result = mapdl.result
    print(result)

    result.plot_nodal_displacement(7, show_displacement=True, displacement_factor=0.4)




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_002.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyMAPDL Result
    Units       : User Defined
    Version     : 25.2
    Cyclic      : False
    Result Sets : 20
    Nodes       : 10201
    Elements    : 10000


    Available Results:
    NSL : Nodal displacements





.. GENERATED FROM PYTHON SOURCE LINES 92-93

plot the 1st mode using contours

.. GENERATED FROM PYTHON SOURCE LINES 93-97

.. code-block:: Python

    result.plot_nodal_displacement(
        0, show_displacement=True, displacement_factor=0.4, n_colors=10
    )




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_003.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 98-102

Animate a high frequency mode

Get a smoother plot by disabling movie_filename and increasing ``n_frames``.
Enable a continuous plot looping with ```loop=True```.

.. GENERATED FROM PYTHON SOURCE LINES 102-114

.. code-block:: Python


    result.animate_nodal_displacement(
        18,
        loop=False,
        add_text=False,
        n_frames=30,
        displacement_factor=0.4,
        show_axes=False,
        background="w",
        movie_filename="plane_vib.gif",
    )




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_004.gif
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_004.gif
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><style>/* PyVista HTML repr stylesheet.
     * Uses pv- prefix to avoid conflicts with other libraries.
     */

    :root {
      --pv-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --pv-border-color: var(--jp-border-color2, #e0e0e0);
      --pv-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --pv-background-color-row-even: var(--jp-layout-color1, #f5f5f5);
      --pv-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
      --pv-badge-active: #1b5e20;
      --pv-badge-normals: #0d47a1;
      --pv-badge-vectors: #00695c;
      --pv-badge-tcoords: #4527a0;
    }

    body[data-jp-theme-light="false"] {
      --pv-font-color0: var(--jp-content-font-color0, rgba(255, 255, 255, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(255, 255, 255, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(255, 255, 255, 0.38));
      --pv-border-color: var(--jp-border-color2, #424242);
      --pv-disabled-color: var(--jp-layout-color3, #616161);
      --pv-background-color-row-even: var(--jp-layout-color1, #1a1a1a);
      --pv-background-color-row-odd: var(--jp-layout-color2, #252525);
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    html[theme="dark"],
    html[data-theme="dark"],
    body[data-theme="dark"],
    body.vscode-dark {
      --pv-font-color0: rgba(255, 255, 255, 1);
      --pv-font-color2: rgba(255, 255, 255, 0.54);
      --pv-font-color3: rgba(255, 255, 255, 0.38);
      --pv-border-color: #424242;
      --pv-disabled-color: #616161;
      --pv-background-color-row-even: #1a1a1a;
      --pv-background-color-row-odd: #252525;
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    /* OS-level dark mode fallback: applies when no explicit data-theme is set */
    @media (prefers-color-scheme: dark) {
      html:not([data-theme="light"]) {
        --pv-font-color0: rgba(255, 255, 255, 1);
        --pv-font-color2: rgba(255, 255, 255, 0.54);
        --pv-font-color3: rgba(255, 255, 255, 0.38);
        --pv-border-color: #424242;
        --pv-disabled-color: #616161;
        --pv-background-color-row-even: #1a1a1a;
        --pv-background-color-row-odd: #252525;
        --pv-badge-active: #66bb6a;
        --pv-badge-normals: #64b5f6;
        --pv-badge-vectors: #4db6ac;
        --pv-badge-tcoords: #b39ddb;
      }
    }

    .pv-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
      line-height: 1.6;
      padding-bottom: 4px;
      font-family: var(--jp-ui-font-family, sans-serif);
      font-size: var(--jp-ui-font-size1, 13px);
      color: var(--pv-font-color0);
    }

    .pv-text-repr-fallback {
      display: none;
    }

    /* Header */
    .pv-header {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 6px;
      padding-bottom: 6px;
      border-bottom: solid 1px var(--pv-border-color);
      margin-bottom: 4px;
    }

    .pv-header-text {
      display: flex;
      flex-direction: column;
      gap: 1px;
      min-width: 0;
      flex: 1;
    }

    .pv-obj-type {
      font-weight: 600;
      color: var(--pv-font-color0);
    }

    .pv-header-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 2px 7px;
      border-radius: 3px;
      color: var(--pv-font-color2);
      border: 1px solid var(--pv-border-color);
      white-space: nowrap;
    }

    /* Metadata (always-visible key-value rows) */
    .pv-metadata {
      margin: 4px 0 6px 0;
      font-size: 0.92em;
      line-height: 1.5;
    }

    .pv-meta-row {
      display: flex;
      flex-wrap: wrap;
      gap: 1px 14px;
      padding: 1px 0;
    }

    .pv-meta-row-label {
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
      min-width: 60px;
    }

    .pv-meta-entry {
      white-space: nowrap;
    }

    /* Copy-to-clipboard button */
    .pv-copy-btn {
      display: inline-block;
      cursor: pointer;
      opacity: 0.5;
      font-size: 0.85em;
      padding: 0 3px;
      vertical-align: middle;
      transition: opacity 0.15s;
      user-select: none;
      border: none;
      background: none;
      color: var(--pv-font-color3);
    }

    .pv-copy-btn:hover {
      opacity: 1;
      color: var(--pv-font-color0);
    }

    .pv-meta-label {
      color: var(--pv-font-color3);
      font-weight: 400;
      padding-right: 2px;
    }

    /* Sections grid */
    .pv-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto auto 1fr 20px 20px;
      margin-block-start: 0;
      margin-block-end: 0;
      list-style: none;
    }

    .pv-section-item {
      display: contents;
    }

    /* Hidden checkbox for expand/collapse */
    .pv-section-item > input {
      display: block;
      opacity: 0;
      height: 0;
      margin: 0;
    }

    .pv-section-item > input + label {
      color: var(--pv-disabled-color);
    }

    .pv-section-item > input:enabled + label {
      cursor: pointer;
      color: var(--pv-font-color2);
    }

    .pv-section-item > input:enabled + label:hover {
      color: var(--pv-font-color0);
    }

    /* Section summary (left column label) */
    .pv-section-summary {
      grid-column: 1;
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
    }

    .pv-section-summary > span {
      display: inline-block;
      padding-left: 0.3em;
    }

    .pv-section-summary-in:disabled + label {
      color: var(--pv-font-color2);
    }

    /* Expand/collapse arrows */
    .pv-section-summary-in + label:before {
      display: inline-block;
      content: "\25b6";
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .pv-section-summary-in:disabled + label:before {
      color: var(--pv-disabled-color);
    }

    .pv-section-summary-in:checked + label:before {
      content: "\25bc";
    }

    .pv-section-summary-in:checked + label > span {
      display: none;
    }

    .pv-section-summary,
    .pv-section-inline-details {
      padding-top: 4px;
    }

    .pv-section-inline-details {
      grid-column: 2 / -1;
    }

    .pv-section-details {
      grid-column: 1 / -1;
      margin-top: 4px;
      margin-bottom: 5px;
    }

    .pv-section-summary-in ~ .pv-section-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-inline-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-details {
      display: block;
    }

    .pv-section-summary-in:checked ~ .pv-section-details:has(.pv-var-list) {
      display: contents;
    }

    /* Variable (array) list */
    .pv-var-list,
    .pv-var-item {
      display: contents;
    }

    .pv-var-item > div,
    .pv-var-item label,
    .pv-var-item > .pv-var-name span {
      background-color: var(--pv-background-color-row-even);
      border-color: var(--pv-background-color-row-odd);
      margin-bottom: 0;
      padding-top: 2px;
    }

    .pv-var-list > li:nth-child(odd) > div,
    .pv-var-list > li:nth-child(odd) > label,
    .pv-var-list > li:nth-child(odd) > .pv-var-name span {
      background-color: var(--pv-background-color-row-odd);
      border-color: var(--pv-background-color-row-even);
    }

    .pv-var-name {
      grid-column: 1;
    }

    .pv-var-dims {
      grid-column: 2;
    }

    .pv-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--pv-font-color2);
    }

    .pv-var-range {
      grid-column: 4;
      color: var(--pv-font-color3);
      font-size: 0.92em;
    }

    .pv-var-badges {
      grid-column: 5;
      padding-left: 8px;
    }

    .pv-var-name,
    .pv-var-dims,
    .pv-var-dtype,
    .pv-var-range {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .pv-var-name:hover,
    .pv-var-dims:hover,
    .pv-var-dtype:hover,
    .pv-var-range:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .pv-var-name span {
      padding-left: 25px !important;
    }

    .pv-var-name-active span {
      font-weight: 600;
    }

    /* Badges */
    .pv-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 1px 5px;
      border-radius: 3px;
      vertical-align: middle;
      line-height: 1.4;
    }

    .pv-badge-active {
      color: var(--pv-badge-active);
      border: 1px solid var(--pv-badge-active);
    }

    .pv-badge-normals {
      color: var(--pv-badge-normals);
      border: 1px solid var(--pv-badge-normals);
    }

    .pv-badge-vectors {
      color: var(--pv-badge-vectors);
      border: 1px solid var(--pv-badge-vectors);
    }

    .pv-badge-tcoords {
      color: var(--pv-badge-tcoords);
      border: 1px solid var(--pv-badge-tcoords);
    }

    /* Logo and Icons */
    .pv-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-logo svg {
      width: 28px;
      height: 28px;
    }

    .pv-brand-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-brand-logo svg {
      height: 20px;
      width: auto;
    }

    /* Children list (MultiBlock / PartitionedDataSet) */
    .pv-children-list {
      padding-left: 25px !important;
      list-style: none;
    }

    .pv-children-list li {
      padding: 1px 0;
    }

    .pv-child-name {
      font-weight: 500;
    }

    .pv-child-type {
      color: var(--pv-font-color2);
      font-style: italic;
    }

    .pv-child-type:before {
      content: "\00b7";
      padding: 0 6px;
      font-style: normal;
    }

    .pv-child-detail {
      color: var(--pv-font-color3);
      font-size: 0.9em;
    }

    .pv-child-detail:not(:empty):before {
      content: "\00b7";
      padding: 0 6px;
    }
    </style><pre class='pv-text-repr-fallback'>CameraPosition(position=(1.5773502691896262, 1.5773502691896262, 1.5773502691896262),
                   focal_point=(0.0, 0.0, 0.0),
                   viewup=(0.0, 0.0, 1.0))</pre><div class='pv-wrap' style='display:none'><div class='pv-header'><div class='pv-header-text'><div class='pv-obj-type'>CameraPosition<button class='pv-copy-btn' title='Copy to clipboard' data-copy='[(1.5773502691896262, 1.5773502691896262, 1.5773502691896262), (0.0, 0.0, 0.0), (0.0, 0.0, 1.0)]' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div></div></div><div class='pv-metadata'><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>position</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(1.5774, 1.5774, 1.5774)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (1.5774, 1.5774, 1.5774)</span></div><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>focal_point</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(0.0000, 0.0000, 0.0000)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (0.0000, 0.0000, 0.0000)</span></div><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>viewup</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(0.0000, 0.0000, 1.0000)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (0.0000, 0.0000, 1.0000)</span></div></div></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 115-118

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 118-119

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 8.439 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: pyvista_mesh.ipynb <pyvista_mesh.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: pyvista_mesh.py <pyvista_mesh.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: pyvista_mesh.zip <pyvista_mesh.zip>`
